--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "sousta-mvp-frontend",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
