--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hardhat-boilerplate",
-  "version": "1.0.0",
-  "description": "A boilerplate repository to get you started with Hardhat and Ethereum development",
+  "name": "sousta-mvp",
+  "version": "0.0.1",
+  "description": "MVP for the SOUSTA Asset Tokenization platform.",
   "scripts": {
     "test": "hardhat test"
   },
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/NomicFoundation/hardhat-boilerplate.git"
   },
-  "author": "Nomic Foundation",
+  "author": "Paul Garcia",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/NomicFoundation/hardhat-boilerplate/issues"
