--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -12,7 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@rsksmart/rlogin": "^1.5.1",
+    "@walletconnect/web3-provider": "^1.8.0",
     "autoprefixer": "10.4.14",
+    "ethers": "^5.4.7",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
