--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -16,6 +16,7 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "autoprefixer": "10.4.14",
     "ethers": "^5.4.7",
+    "js-cookie": "^3.0.5",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
