--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@rsksmart/rlogin": "^1.5.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@walletconnect/web3-provider": "^1.8.0",
     "autoprefixer": "10.4.14",
     "ethers": "^5.4.7",
