--- a/nextjs-frontend/package.json
+++ b/nextjs-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@rsksmart/rlogin": "^1.5.1",
     "@tailwindcss/forms": "^0.5.3",
