--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "description": "MVP for the SOUSTA Asset Tokenization platform.",
   "scripts": {
-    "test": "hardhat test",
-    "new-rsktestnet-seed-phrase": "hardhat run scripts/setup-seed-phrase.js --network rsktestnet"
+    "test": "yarn hardhat test",
+    "new-rsktestnet-seed-phrase": "hardhat run scripts/setup-seed-phrase.js --network rsktestnet",
+    "coverage": "yarn hardhat coverage"
   },
   "repository": {
     "type": "git",
@@ -35,7 +36,7 @@
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
-    "solidity-coverage": "^0.8.2",
+    "solidity-coverage": "^0.8.4",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
