--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,35 +1,30 @@
 {
   "name": "sousta-mvp-frontend",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "bootstrap": "^4.4.1",
-    "ethers": "^5.4.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "prettier": "^2.8.8",
-    "react-scripts": "5.0.1"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.0.5",
+    "@rsksmart/rlogin": "^1.5.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "autoprefixer": "10.4.14",
+    "ethers": "^5.4.7",
+    "js-cookie": "^3.0.5",
+    "next": "13.4.8",
+    "postcss": "8.4.24",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2"
   }
 }
